--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,68 @@
+.title {
+  margin: auto;
+  width:200px
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 50%;
+  margin: auto;
+}
+
 .square {
+  background-color: aqua;
   border: 2px solid black;
-  height: 100px;
+  height: 30%;
+  width: 30%;
+  font-size: 5rem;
+  text-align: center;
+}
+
+.square:hover {
+  background-color: blueviolet;
+}
+
+.square:active {
+  background-color: white
+}
+
+.resetButton {
+  margin-left: 45%;
+  width: 110px;
+  font-size: larger;
+  font-weight: bolder
+}
+
+.entire-content{
+  text-align: center;
+}
+
+.entire-content h1 {
+  color: white;
+  font-size: 50px;
+}
+
+.input Label {
+  color:white; 
+  font-size: 35px;
+}
+
+.input Input {
+  font-size: 18px;
+  width: 50%; 
+  margin-left:25%; 
+  padding-left: 12px;
+  padding-right: 12px;
+  padding-top: 6px;
+  padding-top: 6px;
+}
+.button {
+  background-color: #0dcaf0;
   width: 100px;
+  padding: 10px;
+  margin-top: 20px; 
+  margin-left: 10px;
+  margin-right: 10px;
+
 }
