--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .title {
   margin: auto;
-  width:200px
+  width: 200px
 }
 
 .container {
@@ -34,35 +34,22 @@
   font-weight: bolder
 }
 
-.entire-content{
-  text-align: center;
-}
-
-.entire-content h1 {
-  color: white;
-  font-size: 50px;
-}
-
-.input Label {
-  color:white; 
-  font-size: 35px;
-}
-
-.input Input {
-  font-size: 18px;
-  width: 50%; 
-  margin-left:25%; 
-  padding-left: 12px;
-  padding-right: 12px;
-  padding-top: 6px;
-  padding-top: 6px;
-}
 .button {
   background-color: #0dcaf0;
   width: 100px;
   padding: 10px;
-  margin-top: 20px; 
+  margin-top: 20px;
   margin-left: 10px;
   margin-right: 10px;
 
+}
+.submitButton {
+  background-color: #0dcaf0;
+  height: 25px;
+}
+.submitButton:hover{
+  background-color: blueviolet;
+}
+.button:hover{
+  background-color: blueviolet;
 }
