--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,51 @@
-.title {
+* {
+  font-family: fantasy;
+}
+
+/* landing page ----------------- */
+.intro-container {
   margin: auto;
-  width: 200px
+  border: 3px solid none;
+  width: 80%;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-family: fantasy;
+}
+
+.intro-header {
+  font-size: 3rem;
+  margin-bottom: 10px;
+}
+
+.intro-body {
+  font-size: 2rem;
+  margin-bottom: 10px;
+}
+
+.intro-button {
+  font-size: x-large;
+  height: 3rem;
+  width: 5rem;
+  background-color: aqua;
+}
+
+.intro-button:hover {
+  background-color: blueviolet;
+}
+
+/* --------------------------- */
+
+.title {
+  margin-left: 38%; 
+  display:inline-block;
+  width: 69vw;
+  height:15vh; 
+  font-size: 3.5em;
+  justify-content: center;
 }
 
 .container {
@@ -9,6 +54,11 @@
   width: 50%;
   margin: auto;
 }
+
+.modal{ 
+  display: inline;
+}
+
 
 .square {
   background-color: aqua;
@@ -34,22 +84,26 @@
   font-weight: bolder
 }
 
-.button {
+.modal-button {
+  /* display: block; */
   background-color: #0dcaf0;
   width: 100px;
   padding: 10px;
   margin-top: 20px;
   margin-left: 10px;
   margin-right: 10px;
-
+  justify-content: center;
 }
+
 .submitButton {
   background-color: #0dcaf0;
   height: 25px;
 }
-.submitButton:hover{
+
+.submitButton:hover {
   background-color: blueviolet;
 }
-.button:hover{
+
+.button:hover {
   background-color: blueviolet;
 }
